--- a/product_list.html
+++ b/product_list.html
@@ -67,78 +67,28 @@
           </div>
         </nav>
       </div>
-    </header>
-    <div class="wrap page-top-set">
-      <div class="img-wrap">
-        <div class="slideshow-wrap">
-          <div class="mySlides fade"> <img class="img-fluid pic-first" src="public/images/carousel-01.jpg" alt="千層"></div>
-          <div class="mySlides fade"><img class="img-fluid pic-second" src="public/images/carousel-02.jpg" alt="芝士蛋糕"></div>
-          <div class="mySlides fade"> <img class="img-fluid pic-third" src="public/images/carousel-03.jpg" alt="馬卡籠"></div>
-        </div>
-        <div class="text-over-img">
-          <div class="slogan">讓甜點的溫度融入生活中每一個時刻，每一口都帶來滿滿的幸福。</div>
-          <div class="sign">LIN PATISSERIS</div>
-        </div>
-        <div class="btn-carousel-arrow"><a class="prev" onclick="plusSlides(-1)"> <img src="public/images/bnt-carousel-r.svg" alt="bnt-carousel-right"></a><a class="next" onclick="plusSlides(-1)">  <img src="public/images/bnt-carousel-l.svg" alt="bnt-carousel-left"></a></div>
-        <div class="circle-carousel"><span class="dot" onclick="currentSlide(1)"></span><span class="dot" onclick="currentSlide(2)"></span><span class="dot" onclick="currentSlide(3)"></span></div>
-      </div>
+    </header><img class="img-fluid" src="public/images/product-list-top.jpg" alt="馬卡籠">
+    <div class="container page-top-set">
+      <ul class="breadcrumbs">
+        <li><a href="index.html">首頁</a></li>
+        <li>&nbsp;&#10095;&nbsp;</li>
+        <li>產品              </li>
+      </ul>
     </div>
-    <div class="container">
-      <div>
-        <div class="row flex-space-around">
-          <div> 
-            <h2>&nbsp;安心食材&nbsp;</h2>
-            <p>台灣在地食材</p>
-            <P>高級進口原料</P>
-          </div>
-          <div> 
-            <h2>&nbsp;新鮮製作&nbsp;</h2>
-            <p>職人誠摯手做</p>
-            <P>優質賞味體驗</P>
-          </div>
-          <div> 
-            <h2>&nbsp;美好生活&nbsp;</h2>
-            <p>忠於純粹本質</p>
-            <P>分享甜美優雅</P>
-          </div>
-        </div>
-        <div class="row flex-space-around"><img src="public/images/safe-food.svg" alt="安心食材-奶油"><img src="public/images/freshly-made.svg" alt="新鮮製作-工具"><img src="public/images/good-life.svg" alt="美好生活-糕點"></div>
-      </div>
-    </div>
-    <div class="wrap-white" id="banner-news">
-      <div class="container">
-        <div class="text-wrap">
-          <h1>最新消息</h1>
-        </div>
-        <div class="row"><img src="public/images/mango-cake.png" alt="芒果鮮奶油蛋糕">
-          <div>
-            <div> 
-              <div class="date">2022.06.26</div>
-              <h3>季節限定</h3>
-            </div>
-            <p>夏季限定--芒果鮮奶油蛋糕，開賣啦~</p>
-            <p>即日起供應至7月底~</p>
-            <p>為了維持商品的品質，目前僅提供網路預訂到店面取貨，</p>
-            <p>尚未提供宅配還請見諒! </p>
-          </div>
-        </div><a class="bnt" href="product-list-all.html"> 
-          <p>READ MORE &nbsp;&nbsp;&#10095;    </p></a>
-      </div>
-    </div>
-    <div class="position-r"> 
-      <div class="tab-link container"><a class="active" href="#tab1"> 
+    <div class="productpage-position-r container">
+      <div class="tab-link"><a class="active" href="#hot"> 
           <div class="la-show">熱門產品</div>
-          <div class="sm-show">HOT      </div></a><a href="#tab2"> 
+          <div class="sm-show">HOT      </div></a><a href="#new"> 
           <div class="la-show">最新產品</div>
-          <div class="sm-show">NEW</div></a><a href="#tab3"> 
+          <div class="sm-show">NEW</div></a><a href="#limited"> 
           <div class="la-show">季節限定</div>
-          <div class="sm-show">LIMITED                    </div></a><a href="#tab3"> 
-          <div class="la-show">全部產品&nbsp;&nbsp;&#10095;</div>
-          <div class="sm-show">ALL&nbsp;&nbsp;&#10095;                              </div></a></div>
-      <div class="tab-content active" id="tab1"> 
-        <div class="product wrap-white">
-          <div class="container row">
-            <div class="product-wapper col-12 col-md-3"> 
+          <div class="sm-show">LIMITED                    </div></a><a href="#all"> 
+          <div class="la-show">全部產品</div>
+          <div class="sm-show">ALL                          </div></a></div>
+      <div class="tab-content active" id="hot"> 
+        <div class="product product-page-wrap">
+          <div class="row">
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper"><img class="icon-heart" id="heart-hot-a" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-hot-a-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/hot-1.jpg" alt="草莓塔/6吋"></div>
                   <div class="product-text"> 
@@ -146,7 +96,7 @@
                     <p>$800</p>
                   </div></a></div>
             </div>
-            <div class="product-wapper col-12 col-md-3"> 
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper"><img class="icon-heart" id="heart-hot-b" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-hot-b-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/hot-2.jpg" alt="香蜜堅果乳酪蛋糕/塊"></div>
                   <div class="product-text"> 
@@ -154,7 +104,7 @@
                     <p>$300</p>
                   </div></a></div>
             </div>
-            <div class="product-wapper col-12 col-md-3"> 
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper"><img class="icon-heart" id="heart-hot-c" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-hot-c-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/hot-3.jpg" alt="栗子瑪德蓮/3入"></div>
                   <div class="product-text"> 
@@ -162,7 +112,7 @@
                     <p>$150</p>
                   </div></a></div>
             </div>
-            <div class="product-wapper col-12 col-md-3"> 
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper"><img class="icon-heart" id="heart-hot-d" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-hot-d-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/hot-4.jpg" alt=""></div>
                   <div class="product-text"> 
@@ -170,14 +120,13 @@
                     <p>$1000</p>
                   </div></a></div>
             </div>
-          </div><a class="bnt" href="product-list-all.html"> 
-            <p> VIWE ALL &nbsp;&nbsp;&#10095;                  </p></a>
+          </div>
         </div>
       </div>
-      <div class="tab-content" id="tab2">
-        <div class="product wrap-white">
-          <div class="container row">
-            <div class="product-wapper col-12 col-md-3"> 
+      <div class="tab-content" id="new">
+        <div class="product product-page-wrap">
+          <div class="row">
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper">       <img class="icon-heart" id="heart-new-a" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-new-a-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/new-01.png" alt=""></div>
                   <div class="product-text"> 
@@ -185,7 +134,7 @@
                     <p>$890</p>
                   </div></a></div>
             </div>
-            <div class="product-wapper col-12 col-md-3"> 
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper"><img class="icon-heart" id="heart-new-b" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-new-b-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/new-02.png" alt=""></div>
                   <div class="product-text"> 
@@ -193,7 +142,7 @@
                     <p>$750</p>
                   </div></a></div>
             </div>
-            <div class="product-wapper col-12 col-md-3"> 
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper"><img class="icon-heart" id="heart-new-c" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-new-c-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/new-03.png" alt=""></div>
                   <div class="product-text"> 
@@ -201,7 +150,7 @@
                     <p>$300</p>
                   </div></a></div>
             </div>
-            <div class="product-wapper col-12 col-md-3"> 
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper"><img class="icon-heart" id="heart-new-d" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-new-d-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/new-04.png" alt=""></div>
                   <div class="product-text"> 
@@ -209,14 +158,13 @@
                     <p>$400</p>
                   </div></a></div>
             </div>
-          </div><a class="bnt" href="product-list-all.html"> 
-            <p> VIWE ALL &nbsp;&nbsp;&#10095;       </p></a>
+          </div>
         </div>
       </div>
-      <div class="tab-content" id="tab3">
-        <div class="product wrap-white">
-          <div class="container row">
-            <div class="product-wapper col-12 col-md-3"> 
+      <div class="tab-content" id="limited">
+        <div class="product product-page-wrap">
+          <div class="row">
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper">   <img class="icon-heart" id="heart-limit-a" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-limit-a-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/limit-1.jpg" alt=""></div>
                   <div class="product-text"> 
@@ -224,7 +172,7 @@
                     <p>$800</p>
                   </div></a></div>
             </div>
-            <div class="product-wapper col-12 col-md-3"> 
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper">   <img class="icon-heart" id="heart-limit-b" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-limit-b-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/limit-2.jpg" alt=""></div>
                   <div class="product-text"> 
@@ -232,7 +180,7 @@
                     <p>$300</p>
                   </div></a></div>
             </div>
-            <div class="product-wapper col-12 col-md-3"> 
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper">   <img class="icon-heart" id="heart-limit-c" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-limit-c-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/limit-3.png" alt=""></div>
                   <div class="product-text"> 
@@ -240,7 +188,7 @@
                     <p>$300</p>
                   </div></a></div>
             </div>
-            <div class="product-wapper col-12 col-md-3"> 
+            <div class="product-wapper col-6 col-md-3"> 
               <div class="wapper">   <img class="icon-heart" id="heart-limit-d" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-limit-d-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
                   <div class="img-overlay"><img src="public/images/limit-4.png" alt=""></div>
                   <div class="product-text"> 
@@ -248,8 +196,101 @@
                     <p>$300</p>
                   </div></a></div>
             </div>
-          </div><a class="bnt" href="product-list-all.html"> 
-            <p> VIWE ALL &nbsp;&nbsp;&#10095;                             </p></a>
+          </div>
+        </div>
+      </div>
+      <div class="tab-content" id="all">
+        <div class="product product-page-wrap">
+          <div class="row">
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper">       <img class="icon-heart" id="heart-new-a" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-new-a-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/new-01.png" alt=""></div>
+                  <div class="product-text"> 
+                    <h4>藍莓乳酪蛋糕/6吋</h4>
+                    <p>$890</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper"><img class="icon-heart" id="heart-new-b" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-new-b-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/new-02.png" alt=""></div>
+                  <div class="product-text"> 
+                    <h4>巴斯克乳酪蛋糕/6吋</h4>
+                    <p>$750</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper"><img class="icon-heart" id="heart-new-c" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-new-c-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/new-03.png" alt=""></div>
+                  <div class="product-text"> 
+                    <h4>芒果乳酪蛋糕</h4>
+                    <p>$300</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper"><img class="icon-heart" id="heart-new-d" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-new-d-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/new-04.png" alt=""></div>
+                  <div class="product-text"> 
+                    <h4>芒果磅蛋糕/條</h4>
+                    <p>$400</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper">   <img class="icon-heart" id="heart-limit-a" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-limit-a-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/limit-1.jpg" alt=""></div>
+                  <div class="product-text"> 
+                    <h4>芒果鮮奶油蛋糕/8吋</h4>
+                    <p>$800</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper">   <img class="icon-heart" id="heart-limit-b" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-limit-b-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/limit-2.jpg" alt=""></div>
+                  <div class="product-text"> 
+                    <h4>香蕉慕斯</h4>
+                    <p>$300</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper">   <img class="icon-heart" id="heart-limit-d" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-limit-d-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/limit-4.png" alt=""></div>
+                  <div class="product-text"> 
+                    <h4>芒果慕斯</h4>
+                    <p>$300</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper"><img class="icon-heart" id="heart-hot-a" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-hot-a-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/hot-1.jpg" alt="草莓塔/6吋"></div>
+                  <div class="product-text"> 
+                    <h4>草莓塔/6吋</h4>
+                    <p>$800</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper"><img class="icon-heart" id="heart-hot-b" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-hot-b-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/hot-2.jpg" alt="香蜜堅果乳酪蛋糕/塊"></div>
+                  <div class="product-text"> 
+                    <h4>香蜜堅果乳酪蛋糕/塊</h4>
+                    <p>$300</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper"><img class="icon-heart" id="heart-hot-c" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-hot-c-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/hot-3.jpg" alt="栗子瑪德蓮/3入"></div>
+                  <div class="product-text"> 
+                    <h4>栗子瑪德蓮/3入</h4>
+                    <p>$150</p>
+                  </div></a></div>
+            </div>
+            <div class="product-wapper col-6 col-md-3"> 
+              <div class="wapper"><img class="icon-heart" id="heart-hot-d" src="public/images/collect-heart.svg" alt="collect-heart"><img class="icon-heart active" id="heart-hot-d-act" src="public/images/collect-heart-action.svg" alt="collect-heart-action"><a href="#">
+                  <div class="img-overlay"><img src="public/images/hot-4.jpg" alt=""></div>
+                  <div class="product-text"> 
+                    <h4>草莓鮮奶油蛋糕/6吋</h4>
+                    <p>$1000</p>
+                  </div></a></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
