--- a/news.html
+++ b/news.html
@@ -35,14 +35,7 @@
             <ul> 
               <li> <a href="news.html">NEWS</a></li>
               <li><a href="about.html">ABOUT </a></li>
-              <li id="product-nav-swith"><a class="position-r" href="javascript:;">PRODUCT</a>
-                <ul class="submenu" id="product-nav-snb">
-                  <li><a href="product-list-all.html">全部產品</a></li>
-                  <li><a href="product-list-HOT.html">熱門產品</a></li>
-                  <li><a href="product-list-new.html">最新產品</a></li>
-                  <li class="rad"><a href="product-list-.html">季節限定  </a></li>
-                </ul>
-              </li>
+              <li id="product-nav-swith"><a class="position-r" href="product_list.html">PRODUCT</a></li>
               <li> <a href="store.html">STORE </a></li>
               <li> <a href="faq.html">FAQ </a></li>
             </ul>
@@ -68,8 +61,8 @@
         </nav>
       </div>
     </header>
-    <div class="container page-top-set">
-      <ul class="breadcrumbs header-space">
+    <div class="container">
+      <ul class="breadcrumbs header-space page-top-set">
         <li><a href="index.html">首頁</a></li>
         <li>&nbsp;&#10095;&nbsp;</li>
         <li>最新消息     </li>
