--- a/login_register.html
+++ b/login_register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>linpatisserie news</title>
+    <title>linpatisserie</title>
     <link rel="icon" href="public/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="public/js/WOW-master/css/libs/animate.css">
@@ -61,91 +61,14 @@
         </nav>
       </div>
     </header>
-    <div class="container">
-      <ul class="breadcrumbs header-space page-top-set">
+    <div class="container header-space page-top-set">
+      <ul class="breadcrumbs page-top-set">
         <li><a href="index.html">首頁</a></li>
         <li>&nbsp;&#10095;&nbsp;</li>
-        <li>最新消息     </li>
+        <li>登入/註冊</li>
       </ul>
-      <div class="page-title-wrap">最新消息</div>
-      <div class="new-page-wrap">
-        <div class="new-wrap">
-          <picture>
-            <source srcset="public/images/newsph-mango-cake.jpg" media="(max-width: 768px)">
-            <source srcset="public/images/news-mango-cake.jpg" media="(min-width: 769px)"><img src="public/images/news-mango-cake.jpg" alt="芒果鮮奶油蛋糕">
-          </picture>
-          <div>
-            <div class="date">2022.06.26</div>
-            <h3>季節限定</h3>
-            <div class="text">夏日芒果鮮奶油蛋糕，開賣啦~即日起供應至7月底~為了維持商品的品質，目前僅提供網路預訂到店面取貨，尚未提供宅配還請見諒! </div>
-          </div>
-        </div>
-        <div class="new-wrap">
-          <picture>
-            <source srcset="public/images/newsph-peach-cake.jpg" media="(max-width: 768px)">
-            <source srcset="public/images/news-peach-cake.jpg" media="(min-width: 769px)"><img src="public/images/news-peach-cake.jpg" alt="水蜜桃派">
-          </picture>
-          <div>
-            <div class="date">2022.6.15</div>
-            <h3>季節限定</h3>
-            <div class="text">香甜可口拉拉山水蜜桃派即將上市，粉嫩香甜水蜜桃搭配馬茲卡邦乳酪，美好滋味千萬別錯過~6/30前預購享9折優惠，預購取貨日期7/1~7/31。</div>
-          </div>
-        </div>
-        <div class="new-wrap">
-          <picture>
-            <source srcset="public/images/newsph-bulebarrycake.jpg" media="(max-width: 768px)">
-            <source srcset="public/images/news-bulebarrycake.jpg" media="(min-width: 769px)"><img src="public/images/news-bulebarrycake.jpg" alt="藍莓乳酪蛋糕">
-          </picture>
-          <div>
-            <div class="date">2022.04.30</div>
-            <h3>新品推薦</h3>
-            <div class="text">新品上市~藍莓乳酪蛋糕採用進口智利高品質藍莓，每口都能吃到藍莓的鮮甜，搭配香濃乳酪，是經典不敗的搭配!</div>
-          </div>
-        </div>
-        <div class="new-wrap">
-          <picture>
-            <source srcset="public/images/newsph-Basque-cheesecake.jpg" media="(max-width: 768px)">
-            <source srcset="public/images/news-Basque-cheesecake.jpg" media="(min-width: 769px)"><img src="public/images/news-Basque-cheesecake.jpg" alt="巴斯克乳酪蛋糕">
-          </picture>
-          <div>
-            <div class="date">2022.3.10</div>
-            <h3>新品推薦</h3>
-            <div class="text">源自於西班牙的巴斯克乳酪蛋糕 ，又稱「烤焦的乳酪蛋糕」，高溫烘烤出焦香，內含滿滿綿密乳酪，外焦內軟的口感，喜歡乳酪的人一定要把握。</div>
-          </div>
-        </div>
-        <div class="new-wrap">
-          <picture>
-            <source srcset="public/images/newsph-canele.jpg" media="(max-width: 768px)">
-            <source srcset="public/images/news-canele.jpg" media="(min-width: 769px)"><img src="public/images/news-canele.jpg" alt="可麗露">
-          </picture>
-          <div>
-            <div class="date">2022.1.10</div>
-            <h3>新品推薦</h3>
-            <div class="text">常溫小點心--可麗露，是法國傳統點心之一，外酥脆內裡柔軟滋潤的口感聞名於世，樸實的外表之下卻充滿了層次~可麗露六入小禮盒開賣，送禮自用兩相宜!</div>
-          </div>
-        </div>
-        <div class="new-wrap">
-          <picture>
-            <source srcset="public/images/newph-Charlotte.jpg" media="(max-width: 768px)">
-            <source srcset="public/images/new-Charlotte.jpg" media="(min-width: 769px)"><img src="public/images/new-Charlotte.jpg" alt="草莓夏洛特">
-          </picture>
-          <div>
-            <div class="date">2021.11.01</div>
-            <h3>季節限定</h3>
-            <div class="text">冬季限定-草莓夏洛特，夏洛特蛋糕是法國傳統甜點，外層的手指餅乾外酥內軟口感，再搭配當季草莓製成的酸甜慕斯，每口都是幸福的滋味~即日起提供預購!</div>
-          </div>
-        </div>
-        <div class="new-wrap">
-          <picture>
-            <source srcset="public/images/newsph-red-pomegranate-mousse-cake.jpg" media="(max-width: 768px)">
-            <source srcset="public/images/news-red-pomegranate-mousse-cake.jpg" media="(min-width: 769px)"><img src="public/images/news-red-pomegranate-mousse-cake.jpg" alt="紅石榴慕絲小蛋糕">
-          </picture>
-          <div>
-            <div class="date">2021.8.15</div>
-            <h3>季節限定</h3>
-            <div class="text">秋季限定--紅石榴慕斯蛋糕，新鮮紅石榴配上入口即化的慕絲蛋糕~清爽好口感，即日起提供購買~快來讓他成為你下午茶的小夥伴!</div>
-          </div>
-        </div>
+      <div class="product-page-wrap">  
+        <div class="row">                </div>
       </div>
     </div>
     <footer> 
@@ -199,10 +122,10 @@
         </div>
         <p class="copyright text-center">Copyright © 2022 Lin Patisserie. All Rights Reserved</p>
       </div>
-    </footer><a class="page-top" href="javascript:;"><img src="public/images/to-top.png" alt="page-top"></a>
+    </footer><a class="page-top top" href="javascript:;"><img src="public/images/to-top.png" alt="page-top"></a>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
   <script src="public/js/WOW-master/dist/wow.js"></script>
-  <script src="public/js/linpatisserie-script.js">                       </script>
+  <script src="public/js/linpatisserie-script.js"></script>
 </html>
