--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>linpaisserie</title>
+    <title>linpatisserie product</title>
     <link rel="icon" href="public/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="public/js/WOW-master/css/libs/animate.css">
@@ -22,9 +22,9 @@
             <li class="position-r">    <a id="phoneicom-member-swith" href="javascript:;"> <img src="public/images/icon_member.svg" alt="icon_member">
                 <ul class="submember" id="phoneicom-member">
                   <li><a href="login_register.html">登入/註冊</a></li>
-                  <li><a href="member.html">會員中心</a></li>
-                  <li><a href="order.html">訂單查詢</a></li>
-                  <li><a href="collect.html">收藏清單 </a></li>
+                  <li><a href="#">會員中心</a></li>
+                  <li><a href="#">訂單查詢</a></li>
+                  <li><a href="#">收藏清單 </a></li>
                 </ul></a></li>
             <li>   <a class="icon_shoppingcar" href="#"> <img src="public/images/icon_shoppingcar.svg" alt="icon_shoppingcar"></a></li>
             <li><a id="btn-nav-toggle" href="javascript:;"><img src="public/images/icon-menu.svg" alt=""></a></li>
@@ -35,7 +35,7 @@
             <ul> 
               <li> <a href="news.html">NEWS</a></li>
               <li><a href="about.html">ABOUT </a></li>
-              <li id="product-nav-swith"><a class="position-r" href="product_list.html">PRODUCT</a></li>
+              <li id="product-nav-swith"><a class="position-r" href="product.html">PRODUCT</a></li>
               <li> <a href="store.html">STORE </a></li>
               <li> <a href="faq.html">FAQ </a></li>
             </ul>
@@ -50,9 +50,9 @@
               <li class="position-r" id="icom-member-swith">   <a href="javascript:;"><img src="public/images/icon_member.svg" alt="icon_member"></a>
                 <ul class="submember" id="member-list">
                   <li><a href="login_register.html">登入/註冊</a></li>
-                  <li><a href="member.html">會員中心</a></li>
-                  <li><a href="order.html">訂單查詢</a></li>
-                  <li><a href="collect.html">收藏清單 </a></li>
+                  <li><a href="#">會員中心</a></li>
+                  <li><a href="#">訂單查詢</a></li>
+                  <li><a href="#">收藏清單 </a></li>
                 </ul>
               </li>
               <li>   <a class="icon_shoppingcar" href="#"> <img src="public/images/icon_shoppingcar.svg" alt="icon_shoppingcar"></a></li>
@@ -303,9 +303,9 @@
           <dl class="col-12 col-md-3 dpn">
             <dt> </dt>
             <dd><a href="product.html">全部產品</a></dd>
-            <dd><a href="product-list-HOT.html">熱門產品</a></dd>
-            <dd><a href="product-list-new.html">最新產品 </a></dd>
-            <dd><a href="product-list-.html">季節限定   </a></dd>
+            <dd><a href="product.html">熱門產品</a></dd>
+            <dd><a href="product.html">最新產品 </a></dd>
+            <dd><a href="product.html">季節限定   </a></dd>
           </dl>
           <dl class="col-12 col-md-3">
             <dt> </dt>
