--- a/store.html
+++ b/store.html
@@ -76,8 +76,8 @@
       </ul>
       <div class="page-title-wrap">門市資訊</div>
       <div class="product-page-wrap">  
-        <div class="row"> <img src="public/images/store-display.jpg" alt="門市甜點櫃">
-          <div> 
+        <div class="row padding"> <img src="public/images/store-display.jpg" alt="門市甜點櫃">
+          <div class="store-text"> 
             <h4>LIN PATISSERIE</h4>
             <div>營業時段: 週一至週五 09:00-18:00         </div>
             <div>連絡電話: 0800-888-888               </div>
