--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
       <div class="about row"><img class="img-fluid" src="public/images/about-figure.jpg" alt="甜點師">
         <div class="about-text">
           <h4>關於 LIN PATISSERIE</h4>
-          <div>小時候吃蛋糕時，感受到的幸福滋味，開啟了學習甜點的路程，</div>
+          <div>甜點，總是能讓我感受到的幸福滋味，</div>
           <div class="text-mar-bottom"> 抱著一份想分享幸福的心情，經營著 LIn Patisserie。</div>
           <div>我們使用新鮮、優良的原料製作每一個產品，</div>
           <div>採用更健康的減糖配方，讓甜點更加的符合現代人的飲食。</div>
