--- a/store.html
+++ b/store.html
@@ -18,6 +18,7 @@
     </style>
   </head>
   <body>
+    <div id="preloader"></div>
     <header>                              
       <div class="container position-r"> 
         <div class="logo"><a href="index.html">  <img src="public/images/linpatisserie_logo.svg" alt="linpatisserie_logo"></a></div>
